--- a/add_task.html
+++ b/add_task.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,17 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <title>Join</title>
 </head>
+
 <body onload="includeHTML()">
-    
+
     <div w3-include-html="./assets/templates/header.html"></div>
 
-
+    <div>
+        <h1>Add Task</h1>
+    </div>
 
     <div w3-include-html="./assets/templates/side_menu.html"></div>
-    
+
 </body>
+
 </html>
