--- a/add_task.html
+++ b/add_task.html
@@ -11,7 +11,7 @@
 
 <body onload="includeHTML()">
 
-    <!-- <div w3-include-html="./assets/templates/header.html"></div> -->
+    <div w3-include-html="./assets/templates/header.html"></div>
 
     <div>
         <h1>Add Task</h1>
@@ -52,7 +52,7 @@
         </div>
     </form>
 
-    <!-- <div w3-include-html="./assets/templates/side_menu.html"></div> -->
+    <div w3-include-html="./assets/templates/side_menu.html"></div>
 
 </body>
 
