--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="include.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
+    <link rel="stylesheet" href="./fonts/inter-v13-latin/fonts.css">
     <title>Join</title>
 </head>
 <body onload="includeHTML()">
