--- a/add_task.html
+++ b/add_task.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="include.js"></script>
+    <script src="./include.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <title>Join</title>
 </head>
