--- a/contacts.html
+++ b/contacts.html
@@ -18,6 +18,19 @@
         <div class="leftContainer">
             <div>
                 <button class="addNewContact">Add new contact <img class="personAdd" src="assets/img/person_add.png" alt=""></button>
+                <div class="showAllContacts">
+                    <div class="firstLetterFromContacts">
+                        <p>A</p>
+                    </div>
+                    <img src="assets/img/Vector 10.png">
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
