--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,63 @@
                     <div class="firstLetterFromContacts">
                         <p>A</p>
                     </div>
-                    <img src="assets/img/Vector 10.png">
+                    <img class="vectorContacts" src="assets/img/Vector 10.png">
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="firstLetterFromContacts">
+                        <p>B</p>
+                    </div>
+                    <img class="vectorContacts" src="assets/img/Vector 10.png">
+
+                    <div class="contactChamberLeftContainer">
+                        <img src="assets/img/pb-contacts.png">
+                        <div class="nameAndEmailLeftContainer">
+                            <h4>Anton Mayer</h4>
+                            <p>antonm@gmail.com</p>
+                        </div>
+                    </div>
                     <div class="contactChamberLeftContainer">
                         <img src="assets/img/pb-contacts.png">
                         <div class="nameAndEmailLeftContainer">
