--- a/summary.html
+++ b/summary.html
@@ -7,7 +7,7 @@
     <script src="./include.js"></script>
     <link rel="stylesheet" href="./fonts/inter-v13-latin/fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
-    <link rel="stylesheet" href="./summary.css">
+    <link rel="stylesheet" href="./css/summary.css">
   </head>
   <body onload="includeHTML()">
 
