--- a/board.html
+++ b/board.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./fonts/inter-v13-latin/fonts.css">
     <link rel="stylesheet" href="./css/board.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
+    <link rel="stylesheet" href="./fonts.css">
     <script src="./include.js"></script>
 </head>
 
