--- a/summary.html
+++ b/summary.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./include.js"></script>
-    <link rel="stylesheet" href="./fonts/inter-v13-latin/fonts.css">
+    <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/summary.css">
   </head>
