Überlappen der Pbs

--- a/board.html
+++ b/board.html
@@ -51,9 +51,9 @@
             </div>
             <div class="space-between-board width-100percent margin-top-16">
                 <div class="flex-board">
-                    <div class="circle-board background-color-orange">AM</div>
-                    <div class="circle-board background-color-green">EM</div>
-                    <div class="circle-board background-color-darkblue">MB</div>
+                    <div class="circle-board background-color-orange margin-left-9px colorWhite">AM</div>
+                    <div class="circle-board background-color-green margin-left-9px colorWhite">EM</div>
+                    <div class="circle-board background-color-darkblue margin-left-9px colorWhite">MB</div>
                 </div>
                 <img class="priority-icon-board" src="./assets/img/equal-sign-icon.png">
             </div>
