--- a/board.html
+++ b/board.html
@@ -70,9 +70,9 @@
             <div class="name-of-task-board"><span>HTML Base Template Creation</span><p>Create reusable HTML base templates...</p></div>
             <div class="space-between-board width-100percent margin-top-16">
                 <div class="flex-board">
-                    <div class="circle-board background-color-pink">DE</div>
-                    <div class="circle-board background-color-violet">BZ</div>
-                    <div class="circle-board background-color-violet2">AS</div>
+                    <div class="circle-board background-color-pink margin-left-9px colorWhite">DE</div>
+                    <div class="circle-board background-color-violet margin-left-9px colorWhite">BZ</div>
+                    <div class="circle-board background-color-violet2 margin-left-9px colorWhite">AS</div>
                 </div>
                 <img class="priority-icon-board" src="./assets/img/arrow-down-icon.png">
             </div>
@@ -84,9 +84,9 @@
             <div class="name-of-task-board"><span>Daily Kochwelt Recipe</span><p>Implement daily recipe amd portion calculator</p></div>
             <div class="space-between-board width-100percent margin-top-16">
                 <div class="flex-board">
-                    <div class="circle-board background-color-yellow">EF</div>
-                    <div class="circle-board background-color-violet2">AS</div>
-                    <div class="circle-board background-color-red">TW</div>
+                    <div class="circle-board background-color-yellow margin-left-9px colorWhite">EF</div>
+                    <div class="circle-board background-color-violet2 margin-left-9px colorWhite">AS</div>
+                    <div class="circle-board background-color-red margin-left-9px colorWhite">TW</div>
                 </div>
                 <img class="priority-icon-board" src="./assets/img/equal-sign-icon.png">
             </div>
@@ -106,8 +106,8 @@
             </div>
             <div class="space-between-board width-100percent margin-top-16">
                 <div class="flex-board">
-                    <div class="circle-board background-color-lightblue">SM</div>
-                    <div class="circle-board background-color-violet">BZ</div>
+                    <div class="circle-board background-color-lightblue margin-left-9px colorWhite">SM</div>
+                    <div class="circle-board background-color-violet margin-left-9px colorWhite">BZ</div>
                 </div>
                 <img class="priority-icon-board" src="./assets/img/arrow-up-icon.png">
             </div>
