--- a/Login.html
+++ b/Login.html
@@ -9,13 +9,14 @@
     <script src="js/logIn.js"></script>
 </head>
 <body>
-<div class="centerAll">
+    <img id="meinBild" src="assets/img/Capa 2.png">
+
+    <div id="zielbereich"></div>
+
+<div id="inhalt" class="centerAll blur">
 
 
     <div class="displayFLex justifyContent">
-        <div>
-            <img class="joinLogo" src="assets/img/Capa 2.png" alt="">
-        </div>
 
         <div class="notAJoinUser">
             <div class="notAJoinUserText">Not a Join user?</div>
