--- a/Signup.html
+++ b/Signup.html
@@ -9,13 +9,15 @@
     <script src="js/signUp.js"></script>
 </head>
 <body>
-<div class="centerAll">
+
+    <img id="meinBild" src="assets/img/Capa 2.png">
+
+    <div id="zielbereich"></div>
+
+<div id="inhalt" class="centerAll blur">
 
 
     <div class="displayFLex justifyContent">
-        <div>
-            <img class="joinLogo" src="assets/img/Capa 2.png" alt="">
-        </div>
 
         <div class="signedUpSuccessfullyDiv">
             <img class="signedUpSuccessfullyimg" src="assets/img/signedUpSuccessfully.png" alt="">
