edited some html/css

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -14,7 +14,14 @@
 
     <div w3-include-html="./assets/templates/header.html"></div>
 
+    <div class="privacyPolicyContentContainer">
 
+        <div>
+            <img src="./assets/img/arrow-blue-left.png" alt="Back">
+        </div>
+
+
+    </div>
 
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
