--- a/legal_notice.html
+++ b/legal_notice.html
@@ -14,7 +14,11 @@
 
     <div w3-include-html="./assets/templates/header.html"></div>
 
+    <div class="legalNoticeContentContainer">
 
+        
+
+    </div>
 
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
