--- a/add_task.html
+++ b/add_task.html
@@ -7,6 +7,7 @@
     <script src="./include.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/add_task.css">
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join</title>
 </head>
 
