--- a/Login.html
+++ b/Login.html
@@ -6,9 +6,11 @@
     <title>Log in</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="css/logIn.css">
+    <script src="js/signUp.js"></script>
+    <script src="js/register.js"></script>
     <script src="js/logIn.js"></script>
 </head>
-<body>
+<body onclick="initLogIn()">
 <div class="centerAll">
 
 
@@ -23,15 +25,16 @@
         </div>
     </div>
 
-
+    <form onsubmit="logIn(); return false;">
     <div class="LogInField">
         <div class="displayFLex titleLogIn">
             <img src="assets/img/LogIn.png" alt="">
         </div>
+
     <div class="emailPassword">
         <div class="outer-container emailPasswordInputColumn">
             <div class="input-container">
-                <input class="inputEmail" required type="email" placeholder="Email">
+                <input id="inputEmail" class="inputEmail" required type="email" placeholder="Email">
                 <img src="assets/img/mail.png" class="inputfield-icon">
             </div>
             <div class="input-container">
@@ -42,16 +45,17 @@
         <div class="displayFLex rememberMe">
             <label class="custom-checkbox">
                 <input type="checkbox">
-                <span class="checkmark"></span>
+                <span onclick="setLocalStorage()" class="checkmark" id="check"></span>
               </label>
               <p>Remember me</p>
         </div>
     </div>       
         <div class="LogInBottomLogIn">
            <button class="logInButton">Log in</button>
-           <button class="guestLogInButton">Guest Log in</button>
+           <button onclick="guestLogIn()" class="guestLogInButton">Guest Log in</button>
         </div>
     </div>
+</form>
 
     <div class="privacyPolicyLegalNotice">
         <span class="hoverPrivacyPolicy">Privacy Policy</span>
