--- a/Login.html
+++ b/Login.html
@@ -10,17 +10,14 @@
     <script src="js/register.js"></script>
     <script src="js/logIn.js"></script>
 </head>
-<<<<<<< HEAD
-<body onclick="initLogIn()">
+<body onload="initLogIn()">
 <div class="centerAll">
-=======
 <body>
     <img id="meinBild" src="assets/img/Capa 2.png">
 
     <div id="zielbereich"></div>
 
     <div id="inhalt" class="centerAll blur">
->>>>>>> 7fdec27b69ec13264ff7c75c0113909363562437
 
 
     <div class="displayFLex justifyContent">
