--- a/add_task.html
+++ b/add_task.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./include.js"></script>
+    <script src="./js/add_task.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/add_task.css">
+    <link rel="stylesheet" href="./css/add_task_container.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
     <title>Join</title>
 </head>
