--- a/add_task.html
+++ b/add_task.html
@@ -22,7 +22,7 @@
             <h1 class="headlineAddTask">Add Task</h1>
         </div>
 
-        <form>
+        <form id="addTaskForm">
             <div class="leftAddTaskContainer">
                 <div class="titleContainer">
                     <div class="flex-start">
@@ -78,17 +78,18 @@
                     <input class="subtaskPicker" type="text" placeholder="Add new Subtask">
                 </div>
             </div>
-        </form>
-        <div class="fieldRequiredText">
-            <div class="flex-start">
-                <p class="redText">*</p>
-                <span>This field is required</span>
+            <div class="fieldRequiredText">
+                <div class="flex-start">
+                    <p class="redText">*</p>
+                    <span>This field is required</span>
+                </div>
             </div>
-        </div>
-        <div class="clearCreateButtonsContainer">
-            <button class="clearButton">Clear <img src="./assets/img/iconoir_cancel.png" alt=""></button>
-            <button class="createButton">Create Task <img src="./assets/img/check.png" alt=""></button>
-        </div>
+            <div class="clearCreateButtonsContainer">
+                <button class="clearButton" onclick="clearForm()">Clear <img src="./assets/img/iconoir_cancel.png" alt=""></button>
+                <button class="createButton">Create Task <img src="./assets/img/check.png" alt=""></button>
+            </div>
+        </form>
+
     </div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
