--- a/Signup.html
+++ b/Signup.html
@@ -20,7 +20,7 @@
 <div id="inhalt" class="centerAll blur">
 
 
-    <div class="displayFLex justifyContent">
+    <div id="signUP-Div" class="displayFLex justifyContent overlay-signUp">
 
         <div class="signedUpSuccessfullyDiv">
             <img id="signedUp" class="signedUpSuccessfullyimg" src="assets/img/signedUpSuccessfully.png" alt="">
