--- a/summary.html
+++ b/summary.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/summary.css">
     <script src="./js/logIn.js"></script>
+    <script src="./js/templates.js"></script>
     <script src="./js/summary.js"></script>
   </head>
-  <body onload="includeHTML(); extractInitials()">
+  <body onload="includeHTML();">
 
     <div w3-include-html="./assets/templates/header.html"></div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
