--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,8 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="css/contacts.css">
     <script src="include.js"></script>
+    <script src="./js/logIn.js"></script>
+    <script src="./js/templates.js"></script>
     <script src="js/contacts.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
 </head>
