edited legalNotice and privacyPolice
added the go back functionality to the blue back arrow on both Pages.
added the pointer hover effect on both css.

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="backArrow">
-            <img src="./assets/img/arrow-blue-left.png" alt="Back">
+            <img onclick="history.go(-1)" src="./assets/img/arrow-blue-left.png" alt="Back">
         </div>
 
         <div class="ppContent">
