added imgs and edited add_task.html/js

--- a/add_task.html
+++ b/add_task.html
@@ -61,9 +61,9 @@
                 <div class="prioPickerContainer">
                     <span>Prio</span>
                     <div class="prioPickerButtonsContainer">
-                        <button class="urgentButton">Urgent <img src="./assets/img/prioUp.png" alt=""></button>
-                        <button class="mediumButton">Medium <img src="./assets/img/prioEven.png" alt=""></button>
-                        <button class="lowButton">Low <img src="./assets/img/prioDown.png" alt=""></button>
+                        <button type="button" class="urgentButton">Urgent <img src="./assets/img/prioUp.png" alt=""></button>
+                        <button type="button" class="mediumButton">Medium <img src="./assets/img/prioEven.png" alt=""></button>
+                        <button type="button" class="lowButton">Low <img src="./assets/img/prioDown.png" alt=""></button>
                     </div>
                 </div>
                 <div class="categoryContainer">
