--- a/add_task.html
+++ b/add_task.html
@@ -56,7 +56,7 @@
                         <span>Due Date</span>
                         <p class="redText">*</p>
                     </div>
-                    <input class="dateInput" type="date" name="date" id="date">
+                    <input class="dateInput" type="date" id="date">
                 </div>
                 <div class="prioPickerContainer">
                     <span>Prio</span>
