--- a/contacts.html
+++ b/contacts.html
@@ -76,7 +76,7 @@
                                     </div>
 
                                         <div class="cancelOrCreateContact">
-                                            <button class="cancelButton">Cancel <img class="vectorCancelButton" src="assets/img/Vector.png"></button>
+                                            <button type="button" id="cancelAccountSubmit" class="cancelButton">Cancel <img class="vectorCancelButton" src="assets/img/Vector.png"></button>
                                             <button type="submit" id="createAccountSubmit" class="createAccountButton">Create Account <img class="checkCreateAccountButton" src="assets/img/check.png" alt=""></button>
                                         </div>
                                     </form>
